fix: img width on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,11 @@ hr {
     .exif li {
         margin-top: .5rem;
     }
+
+    .gallery img {
+        max-width: 100%;
+        max-width: calc(100% + 2rem);
+    }
 }
 
 figure img,
